# stream-bot

./: .gitignore  Cargo.toml
src/: main.rs
src/client/: client.rs  consumer.rs  mod.rs
src/common/: color.rs  emote.rs  message.rs  mod.rs
