[package]
name = "stream-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
fastrand = "2.0.0"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
hashbrown = "0.14.0"
reqwest = "0.11.18"
serde = "1.0.164"
tokio = { version = "1.29.0", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
